--- a/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
+++ b/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
@@ -63,7 +63,7 @@ theme_nfl_analytics <- function(..., base_size = 12) {
     axis.title = element_text(face = "bold"),
     axis.text = element_text(face = "bold"),
     plot.title.position = "plot",
-    plot.title = element_textbox(size = 16, vjust = .02, hjust = 0.5, face='bold'),
+    plot.title = element_textbox_simple(size = 16, vjust = .02, hjust = 0.5, face='bold'),
     plot.subtitle = element_textbox(hjust = 0.5, lineheight = .4),
     plot.caption = element_textbox(size = 8),
     panel.grid.minor = element_blank(),
@@ -473,8 +473,15 @@ I wanted to layer in data on snap counts to see how his utilization compares wit
 
 # New City, New You: Derrick Henry and Saquon Barkley 
 
-```{r}
-#| fig.width=9
+```{r barkley_henry_cols, include=TRUE}
+#| echo=FALSE
+barkley_henry_cols <- c('D.Henry' = '#241773',
+                        'S.Barkley' = '#acc0c6')
+```
+
+
+```{r make_barkley_henry_df, include=TRUE}
+#| echo=FALSE
 pbp_16_24 <- load_pbp(seasons = 2016:2024) %>% 
   filter(season_type == 'REG',
          posteam %in% c('TEN', 'NYG', 'BAL', 'PHI')) %>% 
@@ -483,7 +490,6 @@ pbp_16_24 <- load_pbp(seasons = 2016:2024) %>%
   arrange(season, game_date, play_id) %>% 
   filter(ball_carrier %in% c('D.Henry', 'S.Barkley'),
          play_type != 'no_play')
-
 
 barkley_henry <- pbp_16_24 %>% 
   group_by(season, posteam, ball_carrier, ball_carrier_id) %>% 
@@ -498,18 +504,31 @@ barkley_henry_epa_per_play <- pbp_16_24 %>%
   summarise(epa_per_play = mean(epa, na.rm=TRUE),
             ttl_epa = sum(epa, na.rm=TRUE), 
             .groups = 'drop')
-  
+```
+
+```{r barkley_henry_plot, include=TRUE}
+#| fig.width=9
 barkley_henry %>% 
   ggplot(.,
          aes(x=touch,
              y=cumsum_epa,
              color=ball_carrier)) + 
   geom_hline(aes(yintercept = 0), linetype='dashed') + 
-  geom_line() + 
+  geom_line(linewidth=1.2) + 
   facet_wrap(~season) + 
-  theme_nfl_analytics()
+  labs(title=glue("New city, new you: <span style='color:#241773'>Derrick Henry</span> and <span style='color:	#acc0c6'>Saquon Barkley</span>'s career 2024 years"),
+       subtitle='<br>Comparing the 2024 season with past seasons in terms of cumulative Expected Points Added',
+       y='Cumulative EPA',
+       x='\nTouch (carry/catch)',
+       caption='**Source**: {nflverse}') + 
+  scale_color_manual(values = barkley_henry_cols) + 
+  theme_nfl_analytics() + 
+  theme(legend.position = 'none',
+        plot.subtitle = element_textbox(lineheight = .5))
 ```
 
+
+# RB vs WR value
 
 Three backs have separated themselves into the elite  
 
