updated work experience

--- a/index.qmd
+++ b/index.qmd
@@ -39,6 +39,8 @@ Let's connect! Feel free to reach out to me on LinkedIn or send me an email.
 
 ------------------------------------------------------------------------
 
+**Staff Analytics Engineer** \| Crisis Text Line
+
 **Sr. Manager, Employer Analytics** \| Guild Education
 
 **Assistant Director of Research** \| Pardee Center for International Futures, University of Denver
