commented out a missed line

--- a/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
+++ b/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
@@ -463,7 +463,7 @@ for (x in 1999:2024) {
 #             aes(x=season + 1,
 #                 label = position_group),
 #             family='Lexend', fontface='bold') + 
-  facet_wrap(~position_group) + 
+  # facet_wrap(~position_group) + 
   # labs(title='Number of players over 35') + 
   # theme_nfl_analytics() + 
   # theme(legend.position = 'none')
@@ -526,7 +526,6 @@ I wanted to layer in data on snap counts to see how his utilization compares wit
 There are only 14 defensive tackles in the last 25 years that have **even played** past the age of 35. For Cam Heyward to be playing at such a high level is without precedent. 
 
 Hall of Fame defensive tackle John Randle (played from 1990-2003) is the closest historical comparison to Heyward's 2024 season. Randle recorded 5.5 sacks in his final season (as a 35 year old), and his last Pro Bowl was two seasons prior. With a strong finish, Cam Heyward should be named to the All-Pro team this season. 
-
 
 # New City, New You: Derrick Henry and Saquon Barkley
 
